fixed Croppie and image input value

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -15,12 +15,12 @@ a {
   color: #00B7FF;
 }
 
-#form {
+#form-auth{
   margin: 30px auto;
   width: 380px;
 }
 
-#form label {
+#form-auth label {
   color: #666;
   display: inline-block;
   margin-bottom: 10px;
@@ -28,8 +28,8 @@ a {
   width: 100%;
 }
 
-#form input,
-#form button {
+#form-auth input,
+#form-auth button {
   box-sizing: border-box;
   font-size: 14px;
   outline: 0;
@@ -38,7 +38,7 @@ a {
   margin-bottom: 20px;
 }
 
-#form button {
+#form-auth button {
   background: #43a3e6;
   border: 1px solid #43a3e6;
   border-radius: 4px;
@@ -53,7 +53,7 @@ a {
   width: 100%;
 }
 
-#form button:hover {
+#form-auth button:hover {
   background: #fff;
   color: #43a3e6;
   transition: .3s ease background;
@@ -92,6 +92,28 @@ a {
   max-width: 150px;
   margin-bottom: 10px;
   margin-top: 10px;
+  
+}
+.pic{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#profile-pic{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+// #imgInp{
+
+// }
+#input-label{
+  max-width: 100px;
 }
 
 // profile card
@@ -105,6 +127,10 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%; 
+  width:32px; 
+  height:32px; 
+  line-height:18px;
 }
 
 .card {
@@ -351,4 +377,3 @@ a {
   margin-bottom: 17px;
 }
 
-.btn{ border-radius: 50%; width:32px; height:32px; line-height:18px;  }
